Korrekturen am Dokument
· Immer Namen in Kapitälchen setzen
· Legendre-Symbol mit Strich
· Formulierungen angepasst

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -57,7 +57,7 @@
 
 \usepackage{siunitx}
 
-\usepackage{nameauth}
+\usepackage[alwaysformat]{nameauth}
 
 % Pakete für das Zeichnen der Hadamard-Matrizen
 \usepackage{pgfplotstable}
@@ -236,7 +236,7 @@
 % \def\dlegendre{\@legendre{0}{1}{}}
 % \def\tlegendre{\@legendre{1}{0.5}{\vphantom{1}}}
 % \makeatother
-\newcommand*{\legendre}[2]{\ensuremath{{#1\atopwithdelims() #2}}}
+\newcommand*{\legendre}[2]{\ensuremath{\genfrac(){}{}{#1}{#2}}}
 
 
 \begin{document}
@@ -284,14 +284,14 @@ Ungleichung~\cite{hadamard1893resolution}\footnote{Eine
 \begin{gather}\label{eq:had-ungl}
   \abs{\det (a_{ij})}\leq\prod_{j=1}^{n}\left(\sum_{i=1}^{n} \abs{a_{ij}}^{2}\right)^{\sfrac{1}{2}}
 \end{gather}
-Denn sei $A=(a_{ij})_{i,j=1,\dots,n}$ eine reelle $n\times n$
+Dabei sei $A=(a_{ij})_{i,j=1,\dots,n}$ eine reelle $n\times n$
 Matrix. Die Determinante von $A$ kann als das Volumen des durch die
 Spaltenvektoren von $A$ aufgespannten Parallelepipeds aufgefasst
 werden. Bezeichne $a_{i}$ den $i$-ten Spaltenvektor und sei
 $\norm{\cdot}_{2}^{2}$ die bekannte euklidische Norm. Der $i$-te
 Spaltenvektor besitzt die Länge~$l_{i}= \norm{a_{i}}$. Damit ist das
 Volumen eines Quaders mit den Seitenlängen~$l_{i}$ für $i=1,\dots,n$
-eine obere Schranke für das Volumens des Parallelepipeds. Also haben
+eine obere Schranke für das Volumen des Parallelepipeds. Also haben
 wir $\det(A)\leq\prod_{j=1}^{n} \norm{a_{j}}_{2}= \prod_{j=1}^{n}(\sum_{i=1}^{n}
 \abs{a_{ij}}^{2})^{\sfrac{1}{2}}$ und die Behauptung ist gezeigt.
 
@@ -323,7 +323,7 @@ Zeile~$j$. Das ergibt aber $0$.
 Weiterhin ist die transponierte \HM{} wiederum eine \HM{}. Wenn die
 \autoref{eq:had-ungl} durch $n$ dividiert wird, ergibt sich
 $\sfrac{H}{\sqrt{n}}\cdot\sfrac{H^{T}}{\sqrt{n}}= I_{n}$. Aus der
-linearen Algebra ist bekannt, dass eine Matrix genau dann surjektiv
+linearen Algebra ist bekannt, dass eine Abbildung genau dann surjektiv
 ist, wenn diese injektiv ist. Da aber $\sfrac{H}{\sqrt{n}}$ ein
 Rechtsinverses hat, ist $H$ injektiv, hat also auch ein
 Linksinverses. Damit lässt sich errechnen, dass das Linksinverse von
@@ -333,7 +333,7 @@ $H^{T}H=nI_{n}$.
 Die Zeilen oder Spalten einer \HM{} können beliebig
 vertauscht werden. Da eine Vertauschung die Orthogonalitätseigenschaft
 beibehält, ist das Ergebnis wieder eine \HM{}. Die
-Multiplikation von Zeilen oder Spalten mit $-1$ einer \HM{}
+Multiplikation von Zeilen oder Spalten einer \HM{} mit $-1$
 erzeugt wiederum eine \HM. Angenommen die $i$-te Zeile
 wird mit $-1$ multipliziert. Das Skalarprodukt der Zeile mit sich
 bleibt in dem Fall gleich. Das Skalarprodukt der Zeilen~$i$ und $j$
@@ -342,15 +342,16 @@ mit $i\neq j$ ist dann $\sum_{k=1}^{n} -h_{i,j}h_{k,j}=
 erhalten.
 
 \begin{satz}\label{satz:grad-hm}
-  Sei $k\in \N$. Der Grad~$n$ einer \HM{} ist dann $n=1$, $2$
-  oder $n=4k$.
+  Der Grad~$n$ einer \HM{} ist $n=1$, $2$ oder $n=4k$ für ein $k\in
+  \N$.
   \begin{proof}
-    \HMen{} vom Grad~$1$ und $2$ sind in \autoref{bsp:hm}
-    genannt. Im folgende wird davon ausgegangen, dass die
-    \HM{} aus mindestens drei Zeilen besteht. \OE{} bestehe
-    die erste Zeile aus $+1$-Einträgen. Gegebenenfalls muss die Matrix
-    durch die oben aufgeführten Umformungen transformiert werden. Die
-    ersten drei Zeilen können nun folgende Form haben:
+    \HMen{} vom Grad~$1$ und $2$ sind in \autoref{bsp:hm} genannt. Im
+    folgenden wird davon ausgegangen, dass die \HM{} aus mindestens
+    drei Zeilen besteht. \OE{} bestehe die erste Zeile aus
+    $+1$-Einträgen. Gegebenenfalls muss die Matrix durch die oben
+    aufgeführten Umformungen transformiert werden. Die ersten drei
+    Zeilen können nach geeigneter Spaltenvertauschung nun folgende
+    Form haben:
     \begin{gather*}
       \begin{pmatrix}
         +1\cdots+1 & +1\cdots+1 & +1\cdots+1 & +1\cdots+1\\
@@ -382,7 +383,7 @@ Eine weitere Annäherung an die \Hadamard sche Vermutung erfolgte über
 asymptotische Abschätzungen. So gelang \Seberry{} der Nachweis, dass
 es für jedes $q\in\N$ ein von $q$ abhängiges $t_{q}$ existiert, so
 dass es eine \HM{}  des Grades~$2^{s}t_{q}$ für $s\geq t_{q}$
-gibt. Die oben genannte Vermutung besagt, dass $s=2$
+gibt.\todo{Verbessern!} Die oben genannte Vermutung besagt, dass $s=2$
 ist. \Seberry{} zeigte 1976, dass gilt, $s\geq
 \floor{2\log_{2}(\sfrac{t_{q}-3}{2})}$.
 Diese Schranke wurde in den vergangenen Jahren weiter
@@ -556,14 +557,14 @@ lassen sich andere \HMen{} erzeugen.
 \end{alignat*}
 Durch die Betrachtung von \HMen{}, die durch die oben genannten
 Umformungen enstanden sind, sind keine wesentlich neuen Erkenntnisse
-zu erwarten. Andererseits sind im \autoref{fig:had20} drei
+zu erwarten. Andererseits sind in \autoref{fig:had20} drei
 \HMen{} vom Grad~$20$ aufgeführt, die nicht durch
 Umformungen entstanden sind. In den drei Fällen gibt es keine
 Möglichkeit, die Matrizen durch Vertauschung oder Multiplikation mit
 $-1$ ineinander zu überführen.
 
 In der Literatur wird von äquivalenten \HMen{} gesprochen,
-wenn sich zwei \HMen{} durch Vertauschung von Reihen oder
+wenn sich zwei \HMen{} durch Vertauschung von Zeilen oder
 Spalten oder Multiplikation mit $-1$ ineinander überführen
 lassen. Diese Transformation kann ebenfalls durch Multiplikation mit
 entsprechenden Permutationsmatrizen dargestellt werden. Im Rahmen
@@ -573,26 +574,25 @@ genau einer Zeile und Spalte einen Eintrag, der von $0$ verschieden
 ist. Der Begriff der Äquivalenz wird nun unter Ausnutzung dieser
 Tatsache formuliert.
 \begin{defini}
-  Seien $H_{1}$ und $H_{2}$ zwei $n\times n$ \HMen{} sowie
-  $P$, $Q$ zwei $n\times n$ Permutationsmatrizen. Die Matrizen $H_{1}$
+  Seien $H_{1}$ und $H_{2}$ zwei $n\times n$ \HMen{}. Die Matrizen $H_{1}$
   und $H_{2}$ heißen
   \highl[Hadamard-Matrix!äquivalent]{äquivalent}\index{äquivalent},
-  wenn gilt
+  wenn $n\times n$  Permutationsmatrizen $P$, $Q$ mit
   \begin{gather*}
     H_{1} = PH_{2}Q^{T}
   \end{gather*}
+  existieren.
 \end{defini}
 
-Damit zerfallen die \HMen{} vom Grad~$n$ in
-Äquivalenzklassen. Für die Grade~$1$, $2$, $4$, $8$ und $12$ existiert
-eine Äquivalenzklasse. Für $n=16$ fand \Hall{} 1961 heraus, dass es
-fünf Äquivalenzklassen gibt~\cite{hall1961hadamard}. Vier Jahre später
-zeigte er, dass es $n=20$ zwei Klassen weniger
-hat~\cite{zbMATH01321696}.  Die Klassifikation von $n=24$ wurde 1989
-durch \Kimura{} abgeschlossen~\cite{zbMATH04135959}. Aufbauend auf
-einer Arbeit von Ito et.\,al~\cite{zbMATH03749020} zeigte er, dass
-60~Äquivalenzklassen existieren. Schließlich existieren für
-\HMen{} vom Grad~$28$ insgesamt
+Damit zerfallen die \HMen{} vom Grad~$n$ in Äquivalenzklassen. Für die
+Grade~$1$, $2$, $4$, $8$ und $12$ existiert genau eine
+Äquivalenzklasse. Für $n=16$ fand \Hall{} 1961 heraus, dass es fünf
+Äquivalenzklassen gibt~\cite{hall1961hadamard} und 1965 zeigte er,
+dass es 14~Klassen für $n=20$ gibt~\cite{zbMATH01321696}.  Die
+Klassifikation von $n=24$ wurde 1989 durch \Kimura{}
+abgeschlossen~\cite{zbMATH04135959}. Aufbauend auf einer Arbeit von
+Ito et.\,al~\cite{zbMATH03749020} zeigte er, dass 60~Äquivalenzklassen
+existieren. Schließlich existieren für \HMen{} vom Grad~$28$ insgesamt
 487~Klassen~\cite{HoradamHM1951}. Bei höheren Graden ist die Anzahl
 nicht mehr einfach ermittelbar. Die Literatur spricht hier von einer
 algorithmischen Explosion und hat diese Fälle durch Abschätzungen nach
@@ -601,12 +601,13 @@ unten behandelt. Erst im Jahr 2013 gelang es \Kharaghani{} und
 ihrer Arbeit \citetitle{JCD:JCD21323}~\cite{JCD:JCD21323} kommen sie
 zu dem Ergebnis, dass genau \num{13710027}~Äquivalenzklassen
 existieren. Zum Zeitpunkt der Niederschrift dieser Arbeit existierte
-aktuellste Abschätzung für den Grad~$n=36$ von
+die aktuellste Abschätzung für den Grad~$n=36$ von
 \Orrick{}~\cite{orrick2008}. Diese besagt, dass die Anzahl der
 Äquivalenzklassen größer als \num{18292717} ist.
 
-\Orrick{} definiert in seiner Arbeit \citetitle{orrick2008} den
-Begriff der $Q$-Äquivalenz. Dies ist eine schwächere Form des
+\Orrick{} definiert in seiner Arbeit
+\citetitle{orrick2008}~\cite{orrick2008} den Begriff der
+$Q$-Äquivalenz. Dies ist eine schwächere Form des
 Äquivalenzbegriffs. Daneben gibt es weitere Versuche, eine schwächere
 Definition zur Handhabung der Äquivalenzen zu finden. Hierauf soll im
 folgenden nicht näher eingegangen werden.
@@ -621,7 +622,7 @@ von Wichtigkeit sind.
 \label{sec:kronecker-produkt}
 
 \begin{defini}
-  Sei $R$ ein Ring, $A$ eine $m\times m$ Matrix und $B$ eine $n\times
+  Sei $R$ ein Ring, $A=(a_{ij})$ eine $m\times m$ Matrix und $B=(b_{kl})$ eine $n\times
   n$ Matrix mit $a_{ij}, b_{kl}\in R$ für $i,j=1,\dots,m$ und
   $k,l=1,\dots,n$. Das \highl{Tensorprodukt} $A\otimes B$ in
   \autoref{eq:kron-prod} wird als \highl{Kronecker-Podukt} bezeichnet.
@@ -700,14 +701,14 @@ häufig benutzt. Diese ist wie die Determinante ein Polynom in den
 Einträgen der Matrix und besitzt folgende Definition:
 \begin{defini}[Permanente]
   Sei $n\in\N$ und $S_{n}$ die symmetrische Gruppe aller Permutationen
-  von $n$. Die \highl{Permanente} einer $n\times n$ Matrix~$A$ ist
+  von $n$. Die \highl{Permanente} einer $n\times n$ Matrix~$A=(a_{ij})$ ist
   definiert durch:
   \begin{gather}
     \label{eq:permanente}
     \perm(A)\coloneqq\sum_{\sigma\in S_{n}} \prod_{i=1}^{n} a_{i,\sigma(i)}
   \end{gather}
 \end{defini}
-Unter Zugrundelegung der Leibnitzschen Formel unterscheidet sich die
+Unter Zugrundelegung der Leibnizschen Formel unterscheidet sich die
 obenstehende Definition nur durch die fehlende Signumsfunktion von der
 Determinante einer Matrix.
 \begin{bsp}
@@ -751,11 +752,12 @@ keinen Algorithmus gibt, der dies in polynomialer Zeit lösen
 kann.\todo{Evtl. weitere Eigenschaften}
 
 Zu den Eigenschaften der Permanente von \HMen{} ist wenig
-bekannt. Wegen der \autoref{eq:had-ungl} ist leicht zu sehen, dass für
+bekannt. Wegen der \autoref{eq:had-ungl} ist leicht\todo{wie?} zu sehen, dass für
 eine \HM~$H$ gilt, $\abs{\perm(H)}\leq \abs{\det(H)}=
 n^{\sfrac{n}{2}}$. Weiterhin gelang es 2005, \Wanless{} die
 Permanenten aller \HMen{} bis zum Grad~28 zu berechnen. Im
 \autoref{chap:konstr} sollen weitere Ergebnisse vorgestellt werden.
+\todo[inline]{Was ist mit äquivalenten \HMen?}
 
 \subsection{Zyklische Matrix}
 \label{sec:circulant}
@@ -808,7 +810,7 @@ die bekannte Permutationsmatrix.
 \chapter{Konstruktion von \HMen}
 \label{chap:konstr}
 
-Eine Annährung an das Problem von \Hadamard{} erfolgt über die
+Eine Annäherung an das Problem von \Hadamard{} erfolgt über die
 explizite Konstruktion von \HMen{}. So zeigte bereits
 \Sylvester{}~\cite{Sylvester1867}, dass sich für $n\geq1$
 \HMen{} vom Grad~$2^{n}$ konstruieren lassen. Nachdem
