--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -174,6 +174,8 @@
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
 
+\DeclareMathOperator*{\Sym}{Sym}       % Zeichen für symmetrische Gruppe
+
 % Setup für die grafische Darstellung der Hadamard-Matrizen
 % Das Beispiel stammt von TeX.SE:
 % <URL:http://tex.stackexchange.com/a/123728/201>
@@ -700,7 +702,7 @@ erforscht. Ein ähnliches Konstrukt ist als Permanente bekannt und wird
 in der Kombinatorik häufig benutzt. Diese ist wie die Determinante ein
 Polynom in den Einträgen der Matrix und besitzt folgende Definition:
 \begin{defini}[Permanente]
-  Sei $n\in\N$ und $S_{n}$ die symmetrische Gruppe aller Permutationen
+  Sei $n\in\N$ und $\Sym_{n}$ die symmetrische Gruppe aller Permutationen
   von $n$. Die \highl{Permanente} einer $n\times n$ Matrix~$A=(a_{ij})$ ist
   definiert durch:
   \begin{gather}
