--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -698,8 +698,8 @@ Kronecker"=Produkt:
 \label{sec:permanente}
 
 Innerhalb der linearen Algebra ist die Determinante bekannt und gut
-erforscht. Ein ähnliches Konstrukt ist als Permanente bekannt und wird
-in der Kombinatorik häufig benutzt. Diese ist wie die Determinante ein
+erforscht. Ein verwandter Begriff ist die Permanente. Sie wird
+in der Kombinatorik häufig benutzt. Die Permanente ist wie die Determinante ein
 Polynom in den Einträgen der Matrix und besitzt folgende Definition:
 \begin{defini}[Permanente]
   Sei $n\in\N$ und $\Sym_{n}$ die symmetrische Gruppe aller Permutationen
@@ -707,7 +707,7 @@ Polynom in den Einträgen der Matrix und besitzt folgende Definition:
   definiert durch:
   \begin{gather}
     \label{eq:permanente}
-    \perm(A)\coloneqq\sum_{\sigma\in S_{n}} \prod_{i=1}^{n} a_{i,\sigma(i)}
+    \perm(A)\coloneqq\sum_{\sigma\in \Sym_{n}} \prod_{i=1}^{n} a_{i,\sigma(i)}
   \end{gather}
 \end{defini}
 Unter Zugrundelegung der Leibnizschen Formel unterscheidet sich die
@@ -751,7 +751,15 @@ bekannt. Diese Verfahren benötigen $\CO(n^{3})$ Zeit. Die Forscher
 Permanente in die Klasse der \#P"=vollständigen gehört. Das bedeutet,
 dass dies mindestens in der Klasse NP liegt und es damit vermutlich
 keinen Algorithmus gibt, der dies in polynomialer Zeit lösen
-kann.\todo{Evtl. weitere Eigenschaften}
+kann.
+
+Die Permanente ist invariant gegenüber Vertauschungen von Zeilen und
+Spalten. Denn durch die Vertauschung werden die Faktoren des Produkts
+permutiert. Wegen der Kommutativität und da alle Eleemente von
+$\Sym_n$ durchlaufen werden, gibt es keine Änderung des
+Ergebnisses. Ebenso entspricht die Permanente einer transponierten
+Matrix~$A$ der Permanente der ursprünglichen
+Matrix~$A$.  \todo{Evtl. weitere Eigenschaften}
 
 Zu den Eigenschaften der Permanente von \HMen{} ist wenig
 bekannt. Wegen der \autoref{eq:had-ungl} ist leicht\todo{wie?} zu sehen, dass für
