Name von Syvester soll ausgeschrieben sein

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -286,7 +286,7 @@ Unterabschnitten erläutert.
 \label{sec:einleitung}
 
 Die Forschung zu \HMen{} begann im Jahr 1867. Der britische
-Mathematiker \Sylvester{} veröffentlichte den Artikel
+Mathematiker \LSylvester{} veröffentlichte den Artikel
 \citetitle{Sylvester1867}~\cite{Sylvester1867}. Darin stellte er
 Beispiele und Konstruktionsverfahren vor. In dieser Veröffentlichung
 trugen die Matrizen noch nicht den Namen von \LHadamard{}.  Erst im
