--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -500,10 +500,10 @@ Veröffentlichung von \Koukouvinos{} und \Stylianou{} mit dem Titel
 \citetitle{zbMATH05280707}~\cite{zbMATH05280707}.\todo{Werden noch mehr
 Eigenschaften der SHM gebraucht?}
 
-\begin{defini}[Verträgliche \HMen{}]
+\begin{defini}[Befreundete \HMen{}]
   Sei $n\in\N$ und $H_{1}$ eine schiefe $n\times n$ \HM{} sowie
   $H_{2}$ eine \HM{} mit $H_{2}= H_{2}^{T}$. Dann heißen $H_{1}$ und
-  $H_{2}$ \highl[\HM|verträglich]{verträglich},\footnote{In der
+  $H_{2}$ \highl[\HM|befreundet]{befreundet},\footnote{In der
     deutschsprachigen Literatur war hierfür kein eindeutiger Begriff
     zu finden. De Autor versuchte daher, dass englische Wort
     \enquote{amicable} in das Deutsche zu übertragen.} wenn gilt
@@ -512,9 +512,9 @@ Eigenschaften der SHM gebraucht?}
   \item $H_{1}H_{2}^{T}= H_{2}H_{1}^{T}$
   \end{enumerate}
 \end{defini}
-Verträgliche \HMen{} können dazu benutzt werden, schiefe \HMen{} zu
+Befreundete \HMen{} können dazu benutzt werden, schiefe \HMen{} zu
 konstruieren und letztere dienen zum Teil für die Konstruktion von
-\HMen{}. Für zwei verträgliche \HMen{} $H_{1}= I+S$ und $H_{2}$ wie
+\HMen{}. Für zwei befreundete \HMen{} $H_{1}= I+S$ und $H_{2}$ wie
 oben, gilt weiterhin $SH_{2}^{T}= H_{2}S^{T}$. Denn $H_{1}H_{2}^{T}=
 (I+S)H_{2}^{T} = H_{2}^{T}+SH_{2}^{T}= H_{2}+SH_{2}^{T}$ und
 $H_{2}H_{1}^{T}= H_{2}(I+S)^{T}= H_{2}+ H_{2}S^{T}$. Also ist
