--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1289,6 +1289,15 @@ ersten Fall $q_{ji}= \legendre{-1}{n}q_{ij}= q_{ij}$ (Symmetrie der
 Jacobsthal"=Matrix) und $q_{ij}= \legendre{-1}{n} q_{ij}= -q_{ij}$
 (Schiefsymmetrie der Jacobsthal"=Matrix) für den zweiten Fall.
 
+Sei $Q$ eine $n\times n$ Jacobsthal"=Matrix und $1_{n\times n}$ eine
+$n\times n$ Matrix für eine ungerade Primzahlpotenz $n\in\N$, die aus
+$1$-Einträgen besteht. Dann gilt, $Q1_{n\times n}= 1_{n\times
+  n}Q=0$. Nach der \autoref{eq:jacobsthal} besteht jede Zeile oder
+Spalte aus einem $0$-Eintrag und gleich vielen $\pm1$-Einträgen. Die
+Summe jeder Zeile und Spalte ist damit $0$.
+
+
+
 \begin{bsp}
   Sei $p=5$. Dann sind die quadratischen Reste $1$ und $4$ und die
   Jacobsthal-Matrix~$Q$ ergibt sich:
