Beweis von Paley I

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1259,7 +1259,7 @@ Bevor die Konstruktionen nach \Paley{} eingeführt werden können, ist
 etwas Vorarbeit nötig. Die Begriffe des quadratischen Rests und
 Legendre-Symbol wurden in \autoref{sec:quadr-resid} eingeführt. Mit
 Hilfe dessen kann die Jacobsthal"=Matrix definiert werden.
-\begin{defini}[Jacobsthal-Matrix]
+\begin{defini}[Jacobsthal-Matrix]\label{def:jacobsthal-matrix}
   Sei $n\in\N$ eine ungerade Primzahlpotenz und $\F_{n}$ ein endlicher
   Körper mit den Elementen $g_{0}=0, g_{1}, \dots,
   g_{n-1}\in\F_{n}$. Eine \highl{Jacobsthal-Matrix} ist eine $n\times
@@ -1373,7 +1373,47 @@ Insgesamt ergibt sich dann die Behauptung:
 
 \subsection{\Paley{} I}
 
-\begin{defini}[Konstruktionsverfahren nach \Paley{} I]
+\begin{satz}[Konstruktionsverfahren nach \Paley{} I]
+  Sei $p\in\N$ eine Primzahlpotenz und $n+1\equiv0\mod{4}$ und die
+  Jacobsthal"=Matrix~$Q$ berechne sich wie in
+  \autoref{def:jacobsthal-matrix} angegeben und es sei $1_{n}$ ein
+  Spaltenvektor aus Eins"=Einträgen. Dann ist
+  \begin{gather}
+    \label{eq:hm-paley-i}
+    H_{n+1} =
+    \begin{pmatrix}
+      1 & -1_{n}^{T}\\
+      1_{n} & Q+I_{n}
+    \end{pmatrix}
+  \end{gather}
+  eine \HM{} vom Grad~$n+1$.
+  \begin{proof}
+    Zum Nachweis werden die Eigenschaften aus dem
+    \autoref{sec:konst-payley} benutzt:
+    \begin{align*}
+      H_{n+1}H_{n+1}^{T} &=
+    \begin{pmatrix}
+      1 & -1_{n}^{T}\\
+      1_{n} & Q+I_{n}
+    \end{pmatrix}
+    \begin{pmatrix}
+      1 & 1_{n}^{T}\\
+      -1_{n} & Q^{T}+I_{n}
+    \end{pmatrix}=
+    \begin{pmatrix}
+      n+1 & 0\\
+      0 & (n+1)I_{n}
+    \end{pmatrix}
+    =(n+1)I_{n+1}
+    \end{align*}
+  \end{proof}
+\end{satz}
+
+\todo[inline]{evtl. Beispiel einbauen}
+
+\subsection{\Paley{} II}
+
+\begin{satz}[Konstruktionsverfahren nach \Paley{} II]
   Sei $p\in\PP$ mit $p\equiv 3 \pmod{4}$, dann ist die Matrix
   \begin{gather*}
     H_{p}=
@@ -1385,36 +1425,9 @@ Insgesamt ergibt sich dann die Behauptung:
     eine \HM vom Grad $p+1$. Dabei bezeichnet $1_{p}$ einen
     Spaltenvektor bestehend aus Eins"=Einträgen und $I_{p}$ die
     Einheitsmatrix.
-\end{defini}
+\end{satz}
 
 
-\subsection{\Paley{} II}
-
-\begin{defini}[Konstruktionsverfahren nach \Paley{} I]
-  Sei $p\in\PP$ mit $p>$ und $p\equiv 1 \pmod{4}$. Die
-  Jacobsthal-Matrix berechne sich durch $\legendre{g_{i}-g_{j}}{p}$
-  für $g_{i}\in\F_{p}$ und sei $S$ die $(p+1)\times (p+1)$ Matrix
-  gebildet durch
-  \begin{gather*}
-    S=
-    \begin{pmatrix}
-      0 & 1^{T}_{p}\\
-      1_{p} & Q
-    \end{pmatrix}
-  \end{gather*}
-  Dabei bezeichnet $1_{p}$ einen Spaltenvektor bestehend aus
-  Eins"=Einträgen. Dann ergibt sich durch folgende Konstruktion
-  \begin{gather*}
-    H_{p}=
-    \begin{pmatrix}
-      S+I_{p+1} & S-I_{p+1}\\
-      S-I_{p+1} & -S-I_{p+1}
-    \end{pmatrix}
-  \end{gather*}
-  eine \HM{} vom Grad~$2(p+1)$.
-\end{defini}
-
-\todo[inline]{evtl. Beispiel einbauen}
 
 Die \HMen{}, die durch die obigen Konstruktionsverfahren von \Paley{}
 erzeugt wurden, sind üblicherweise nicht äquivalent. Die Äquivalenz
