Matrix S mit Eigenschaften

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1429,6 +1429,30 @@ Insgesamt ergibt sich dann die Behauptung:
 
 \subsection{\Paley{} II}
 
+Zur Vorbereitung des zweiten Konstruktionsverfahrens nach \Paley{}
+muss eine weitere Matrix definiert werden:
+\begin{defini}\label{sec:paley-ii-matrixs}
+  Sei $n\in\N$ mit $n\equiv1\mod{4}$ und $Q=(q_{ij})_{0\leq i,j\leq
+    n-1}$ eine $n\times n$ Jacobsthal"=Matrix wie in
+  \autoref{def:jacobsthal-matrix} definiert. Weiterhin sei $1_{n}$ ein
+  $n\times1$ Spaltenvektor, der aus Eins"=Einträgen besteht. Dann
+  ergibt sich die
+  $(n+1)\times(n+1)$ Matrix~$S$ wie folgt:
+  \begin{gather*}
+    S=
+    \begin{pmatrix}
+      0 & 1_{n}^{T}\\
+      1_{n} & Q
+    \end{pmatrix}
+  \end{gather*}
+\end{defini}
+
+Die Matrix~$S$ ist symmetrisch. Denn wie bereits nachgewiesen, ist $Q$
+symmetrisch und die Änderungen in \autoref{sec:paley-ii-matrixs}
+erhalten die Symmetrie"=Eigenschaft. Weiterhin ergibt sich aufgrund
+der Ausführungen, dass $S^{2}= n I_{n+1}$ ist. Mit diesem Wissen kann
+das Konstruktionsverfahren eingeführt werden.
+
 \begin{satz}[Konstruktionsverfahren nach \Paley{} II]
   Sei $p\in\PP$ mit $p\equiv 3 \pmod{4}$, dann ist die Matrix
   \begin{gather*}
