Beispiel für eine HM nach Paley II
TODO: HM nochmal prüfen

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1491,6 +1491,40 @@ das Konstruktionsverfahren eingeführt werden.
   nachgewiesene Eigenschaft $S^{2}=nI_{n+1}$ benötigt.
 \end{satz}
 
+\begin{bsp}
+  In \autoref{bsp:q5} wurde eine $5\times5$ Jacobsthal"=Matrix
+  konstruiert. Die Matrix~$S$ hat folgende Gestalt:
+  \begin{gather*}
+    S=
+    \begin{pmatrix}
+      0 & 1 & 1 & 1 & 1 & 1\\
+      1 & 0 & 1 & -1 & -1 & 1\\
+      1 & 1 & 0 & -1 & -1 & -1\\
+      1 & -1 & 1 & 0 & 1 & -1\\
+      1 & -1 & -1 & 1 & 0 & 1\\
+      1 & 1 & -1 & -1 & 1 &0
+    \end{pmatrix}
+  \end{gather*}
+  Damit ergibt sich die $12\times12$ \HM~$H_{12}$:\todo{prüfen}
+  \begin{gather*}
+    H_{12}=
+    \begin{pmatrix}
+      1 & 1  & 1  &  1 &  1 &  1 & -1 &  1 & 1  &  1 & 1  & 1\\
+      1 & 1  & 1  & -1 & -1 &  1 &  1 & -1 & 1  & -1 & -1 & 1\\
+      1 & 1  & 1  & -1 & -1 & -1 &  1 &  1 & -1 & -1 & -1 & -1\\
+      1 & -1 & 1  &  1 &  1 & -1 &  1 & -1 &  1 & -1 & 1  & -1\\
+      1 & -1 & -1 &  1 &  1 &  1 &  1 & -1 & -1 &  1 & -1 & 1\\
+      1 & 1  & -1 & -1 &  1 &  1 &  1 &  1 & -1 & -1 &  1 & -1\\
+      -1&  1 & 1  &  1 &  1 &  1 & -1 & -1 & -1 & -1 & -1 & -1\\
+      1 & -1 & 1  & -1 & -1 &  1 &  1 & -1 &  1 & -1 & -1 & 1\\
+      1 &  1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 &  1 &  1 &  1\\
+      1 & -1 &  1 & -1 &  1 & -1 & -1 &  1 & -1 & -1 & -1 & 1\\
+      1 & -1 & -1 &  1 & -1 &  1 & -1 &  1 &  1 & -1 & -1 &  -1\\
+      1 &  1 & -1 & -1 &  1 & -1 & -1 &  -1 & 1 & 1 &  -1 & -1
+    \end{pmatrix}
+  \end{gather*}
+\end{bsp}
+
 
 
 Die \HMen{}, die durch die obigen Konstruktionsverfahren von \Paley{}
