Name Plugin erwähnt

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1538,13 +1538,17 @@ gilt genau dann, wenn $p=11$ im ersten Konstruktionsverfahren nach
 \Williamson{} legte in seiner Arbeit
 \citetitle{zbMATH03095564}~\cite{zbMATH03095564} den Grundstein für
 eine weitere Klasse von Konstruktionsverfahren. Er definierte vier
-Matrizen, die er zu einer \HM{} kombinierte.
+Matrizen, die er zu einer \HM{} kombinierte. Diese Matrizen werden in
+einer bestimmten Weise \enquote{zusammengesteckt}. In der
+englischsprachigen Literatur werden die Verfahren, die auf diesem
+Prinzip basieren, als \enquote{Plug-In-Verfahren} bezeichnet.
 \begin{defini}
   Seien $A$, $B$, $C$ und $D$ Matrizen vom Grad~$k$ mit Einträgen
   aus $\{\pm1\}$ mit der Eigenschaft $XY^{T}= YX^{T}$ für
   $X,Y\in\{A,B,C,D\}$ und $X\neq Y$ sowie
   $AA^{T}+BB^{T}+CC^{T}+DD^{T}= 4kI_{k}$. Dann ergibt sich mit
   \begin{gather*}
+    H_{4k}=
     \begin{pmatrix}
       A & B & C & D\\
       B & -A & D & -C\\
