--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1542,7 +1542,7 @@ Matrizen, die er zu einer \HM{} kombinierte. Diese Matrizen werden in
 einer bestimmten Weise \enquote{zusammengesteckt}. In der
 englischsprachigen Literatur werden die Verfahren, die auf diesem
 Prinzip basieren, als \enquote{Plug-In-Verfahren} bezeichnet.
-\begin{defini}
+\begin{satz}
   Seien $A$, $B$, $C$ und $D$ Matrizen vom Grad~$k$ mit Einträgen
   aus $\{\pm1\}$ mit der Eigenschaft $XY^{T}= YX^{T}$ für
   $X,Y\in\{A,B,C,D\}$ und $X\neq Y$ sowie
@@ -1551,13 +1551,49 @@ Prinzip basieren, als \enquote{Plug-In-Verfahren} bezeichnet.
     H_{4k}=
     \begin{pmatrix}
       A & B & C & D\\
-      B & -A & D & -C\\
-      C & -D & -A & B\\
-      D & C & -B & -A
+      -B & A & -D & C\\
+      -C & D & A & -B\\
+      -D & -C & B & A
     \end{pmatrix}
   \end{gather*}
   eine \HM{} vom Grad~$4k$.
-\end{defini}
+  \begin{proof}
+    Für den Beweis muss folgende Rechnung durchgeführt werden:
+    \begin{align*}
+      H_{4k}H_{4k}^{T} &=
+    \begin{pmatrix}
+      A & B & C & D\\
+      -B & A & -D & C\\
+      -C & D & A & -B\\
+      -D & -C & B & A
+    \end{pmatrix}
+    \begin{pmatrix}
+      A^{T} & B^{T} & C^{T} & D^{T}\\
+      B^{T} & A^{T} & D^{T} & -C^{T}\\
+      C^{T} & -D^{T} & A^{T} & B^{T}\\
+      D^{T} & C^{T} & -B^{T} & A^{T}
+    \end{pmatrix}\\
+    &=
+    \begin{pmatrix}
+      4kI_{k} & 0 & 0 & 0\\
+      0 & 4kI_{k} & 0 & 0\\
+      0 & 0 & 4kI_{k} & 0\\
+      0 & 0 & 0 & 4kI_{k}
+    \end{pmatrix}
+    =4kI_{4k}
+    \end{align*}
+    Die Einträge auf der Hauptdiagonale haben alle die Form
+    $AA^{T}+BB^{T}+CC^{T}+DD^{T}$, wobei die Reihenfolge der Addition
+    je nach Diagonaleintrag unterschiedlich ist. Nach Voraussetzung
+    ist das Ergebnis für jeden Diagonaleintrag $4kI_{k}$. Die Einträge
+    außerhalb der Hauptdiagonalen sind \OE{} jeweils von der Form
+    $(-1)VW^{T}+WV^{T}+(-1)XY^{T}+YX^{T}$ für $V,W,X,Y\in\{A,B,C,D\}$
+    und $V\neq W\neq X\neq Y$. Da aber
+    $VW^{T}=WV^{T}$ bzw. $YX^{T}=XY^{T}$ gilt, ist der Gesamtausdruck
+    jeweils $0$.
+  \end{proof}
+\end{satz}
+
 
 
 
