--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1684,6 +1684,8 @@ Konstruktion eine \HM{}:
     -A_{8}& -A_{7}& A_{6} & A_{5} & -A_{4}& -A_{3}& A_{2} & A_{1}
   \end{pmatrix}
 \end{gather*}
+\todo[inline]{Ansatz mit $A_{i}$ sollte Schreibarbeit sparen. Wäre es
+  besser dennoch $A$, $B$, \dots{} zu verwenden?}
 
 \section{Konstruktion nach Goethals-Seidel}
 
