--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -98,6 +98,8 @@
   \<Seidel & Johan Jacob & Seidel & >
   \<Scarpis & Umberto & Scarpis & >
   \<Craigen & Robert & Craigen & >
+  \<Agayan & Sos S. & Agayan & >
+  \<Sarukhanyan & Hakob G. & Sarukhanyan & >
 \end{nameauth}
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
@@ -999,6 +1001,57 @@ definiert wie in \autoref{bsp:hm}.
     \end{pmatrix}
   \end{align*}
 \end{bsp}
+
+Durch die Konstruktion von \Sylvester{} entstehen \HMen{} vom Grad
+$2^{i}$ für natürliche Zahlen $i>1$. Allerdings bleibt hierbei unklar,
+ob es \HMen{} zwischen $2^{i}$ und $2^{i+1}$ für $i\geq3$ gibt. Unter
+anderem wurde von verschiedenen Wissenschaftlern versucht, die
+Zweierpotenz im Ergebnis abzuschwächen. Ein Ansatz stammt von
+\Agayan{} und \Sarukhanyan{}. Sie gehen von zwei \HMen{} $H_{1}$,
+$H_{2}$ vom Grad $4k$ und $4l$ für $k,l\in\N$ aus und konstruieren
+daraus eine \HM{} vom Grad~$8kl$.\footnote{Der Index an beiden \HMen{}
+soll dabei der Unterscheidung der Matrizen und \emph{nicht} zur
+Markierung des Grades dienen.} Dazu werden beide Matrizen zerlegt:
+\begin{align*}
+  H_{1} &=
+  \begin{pmatrix}
+    A & B\\
+    C & D
+  \end{pmatrix}
+  H_{2} &=
+  \begin{pmatrix}
+    E & F\\
+    G & H
+  \end{pmatrix}
+\end{align*}
+Da beide \HMen{} sind, gilt, $H_{1}H_{1}^{T}= 4kI_{4k}$ und
+$H_{2}H_{2}^{T}= 4lI_{4l}$. Das heißt, die Diagonaleinträge errechnen
+sich durch $AA^{T}+BB^{T}= CC^{T}+DD^{T}= 2kI_{2k}$ und
+$EE^{T}+FF^{T}= GG^{T}+HH^{T}= 2lI_{2l}$. Die Ergebnisse außerhalb der
+Hauptdiagonalen sind $AC^{T}+BD^{T}= CA^{T}+DB^{T}=0$ und
+$EG^{T}+FH^{T}= GE^{T}+HF^{T}=0$. Mit Hilfe des Kronecker"=Produkts
+ergibt sich dann die \HM{} vom Grad $8kl$ wie folgt:
+\begin{gather}\label{eq:saruk}
+  H_{8kl}=
+  \begin{pmatrix}
+    \overbrace{\sfrac{1}{2} (A+B)\otimes E + \sfrac{1}{2} (A-B)\otimes G}^{K} &
+    \overbrace{\sfrac{1}{2} (A+B)\otimes F + \sfrac{1}{2} (A-B)\otimes H}^{L}\\
+    \underbrace{\sfrac{1}{2} (C+D)\otimes E + \sfrac{1}{2} (C-D)\otimes G}_{M} &
+    \underbrace{\sfrac{1}{2} (C+D)\otimes F + \sfrac{1}{2} (C-D)\otimes H}_{M}
+  \end{pmatrix}
+\end{gather}
+In der \autoref{eq:saruk} wurden die resultierenden Teilmatrizen mit
+$K$, $L$, $M$ und $N$ bezeichnet. Es ist klar, dass die vier
+Teilmatrizen quadratisch sind und Einträge aus $\{\pm1\}$
+haben. Weiterhin ist zu verifizieren, ob $H_{8kl}H_{8kl}^{T}=
+8klI_{8kl}$ ist. Das erste Diagonalelement ergibt sich durch
+$KK^{T}+LL^{T}= \sfrac{1}{2} (AA^{T}+BB^{T}+CC^{T}+DD^{T})\otimes
+4lI_{4l}$ und $(AA^{T}+BB^{T}+CC^{T}+DD^{T})=4kI_{2k}$. Insgesamt ist
+dann $KK^{T}+LL^{T}=8klI_{4kl}$ und das zweite Diagonalelement
+berechnet sich nach einem ähnlichen Prinzip. Da das Produkt einer
+Matrix aus $\{E,F,G,H\}$ mit einer anderen transponierten Matrix aus
+dieser Menge Null ergibt, ist die Gesamtkonstruktion somit eine \HM{}.
+
 
 In \autoref{sec:permanente} wurde der Begriff der Permanente
 eingeführt. Dabei stellt sich die Frage, ob für eine \HM~$H$ vom
