TODO: Matrix verbessern

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1039,7 +1039,7 @@ ergibt sich dann die \HM{} vom Grad $8kl$ wie folgt:
     \underbrace{\sfrac{1}{2} (C+D)\otimes E + \sfrac{1}{2} (C-D)\otimes G}_{M} &
     \underbrace{\sfrac{1}{2} (C+D)\otimes F + \sfrac{1}{2} (C-D)\otimes H}_{M}
   \end{pmatrix}
-\end{gather}
+\end{gather}\todo{Matrix besser setzen}
 In der \autoref{eq:saruk} wurden die resultierenden Teilmatrizen mit
 $K$, $L$, $M$ und $N$ bezeichnet. Es ist klar, dass die vier
 Teilmatrizen quadratisch sind und Einträge aus $\{\pm1\}$
