--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -900,6 +900,17 @@ verwendet.
 Falls die Nicht"=Null"=Einträge gleich $1$ sind, ergibt sich wieder
 die bekannte Permutationsmatrix.
 
+\subsection{Gewichtungsmatrix}
+\label{sec:weighingmatrix}
+
+Die Gewichtungsmatrizen\todo{Besseren Begriff für weighing matrix}
+ähneln den \HMen{} und werden zur Konstruktion dieser verwendet.
+\begin{defini}
+  Sei $n\in\N$. Eine Gewichtungsmatrix ist eine $n\times n$
+  Matrix~$W=W(n,k)$ mit Einträgen aus $\{0,\pm1\}$, die die Gleichung
+  $WW^{T}= kI_{n}$ für $k\in\n$ erfüllt.
+\end{defini}
+Die Matrix $W(n,n)$ ist eine \HM{}.
 
 \chapter{Konstruktion von \HMen}
 \label{chap:konstr}
