--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -406,7 +406,7 @@ $t_{0}\in\N$ existiert, so dass es eine \HM{} des Grades~$2^{t}q$ mit
 $t\geq t_{0}$ gibt~\cite{Wallis1976188}. Für den Beweis nutzte
 \Seberry{} die so genannten Plugin"=Methoden, die auch beim
 Konstruktionsverfahren nach \Williamson{}
-(~\autoref{sec:konstr-nach-williamson}) zum Einsatz kommen sowie
+(\autoref{sec:konstr-nach-williamson}) zum Einsatz kommen sowie
 Mittel aus der Designtheorie. Der Beweis kann im Rahmen dieser Arbeit
 nicht angeführt werden und daher sei der Leser an die oben genannte
 Veröffentlichung verwiesen.
