Grafik referenziert, ist für Lesefluss besser.

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -447,7 +447,7 @@ zukünftig weitere Verbesserungen dieser Schranke zu erwarten sind.
   \end{align*}
   Für höhere Grade wird die Struktur der Matrizen schnell
   unübersichtlich. Daher hat es sich eingebürgert, diese Beispiele
-  grafisch darzustellen. Untenstehend sind drei Beispiele von
+  grafisch darzustellen. In der \autoref{fig:had20} sind drei Beispiele von
   \HMen{} des Grades~$20$ aufgeführt.
 
   Dabei steht ein schwarzes Feld für einen Matrixeintrag $+1$ und ein
