--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -27,13 +27,23 @@
                                % xfrac muss vor mathtools geladen werden!
 \usepackage{lmodern}
 \usepackage{textcomp}           % wird benötigt, damit der \textbullet
-                                % für itemize in lmodern gefunden wird.
+                                % für itemize in lmodern gefunden
+                                % wird.
+
+% Beide Definitionen müssen vor den unten stehenden Schriften
+% stehen. Sonst entstehen Fehler wegen bereits definierter Zeichen.
+\usepackage{amssymb}     % wird für \R, \C,... gebraucht
+\usepackage{fixmath}     % ISO-konforme griech. Buchstaben
+
+% Schriften
+\usepackage{charter}
+\usepackage{berasans}
+\usepackage{luximono}
+\usepackage[charter]{mathdesign}
 
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage[all,warning]{onlyamsmath}  % warnt bei Verwendung von nicht
                                        % amsmath-Umgebungen z.\,B. $$...$$
-\usepackage{amssymb}     % wird für \R, \C,... gebraucht
-\usepackage{fixmath}     % ISO-konforme griech. Buchstaben
 \usepackage[euro]{isonums} % definiert Komma als Dezimaltrennzeichen
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
@@ -263,7 +273,6 @@
 \tableofcontents
 
 \listoftodos{}
-\todo[inline]{passende Schrift wählen}
 \todo[inline]{Hanfried einbauen}
 \todo[inline]{Titelei strukturieren}
 
