Aussage zu äquivalenten HMen

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -884,7 +884,39 @@ n^{\sfrac{n}{2}}$. Weiterhin gelang es 2005, \Wanless{} die
 Permanenten aller \HMen{} bis zum Grad~28 zu berechnen. Im
 \autoref{sec:konst-sylvester} sollen weitere Ergebnisse für die Konstruktion
 von \Sylvester{} vorgestellt werden.
-\todo[inline]{Was ist mit äquivalenten \HMen?}
+
+Eine Vertauschung von Zeilen und Spalten einer \HM{} lässt die
+Permanente konstant. Denn dadurch ändert sich nur die Reihenfolge der
+Faktoren und durch die Kommutativität der Multiplikation bleibt das
+Ergebnis gleich. Die Multiplikation einer Zeile oder Spalte mit $-1$
+negiert den Wert der Permanente, denn jeder Multiplikator wird mit
+$-1$ multipliziert. Damit lässt sich für die in \autoref{sec:aequi-hm}
+vorgestellten  äquivalenten \HMen{} feststellen, dass der Betrag der
+Permanente zweier äquivalenter \HMen{} $H_{1}$ und $H_{2}$ gleich ist:
+\begin{gather*}
+  \abs{\perm{(H_{1})}}= \abs{\perm{(H_{2})}}
+\end{gather*}
+Die Umkehrung gilt in der Regel nicht. Zwei Matrizen mit betragsmäßig
+gleicher Permanente sind nicht äquivalent. Dazu betrachten sei $H_{4}$
+eine $4\times4$ \HM{} und $A$ eine weitere $4\times4$ Matrix.
+\begin{align*}
+  H_{4} &= 
+  \begin{pmatrix}
+    1 &  1 &  1 &  1\\
+    1 &  1 & -1 & -1\\
+    1 & -1 &  1 & -1\\
+    1 & -1 & -1 &  1
+  \end{pmatrix} &
+  A &=
+  \begin{pmatrix}
+    -1 & 1 & 1 & 1\\
+    1 & -1 & 1 & 1\\
+    1 & 1 & 1 & 1\\
+    1 & 1 & 1 & 1
+  \end{pmatrix}
+\end{align*}
+Es gilt, $\abs{\perm(H_{4})}=\abs{\perm(A)}=8$. Jedoch sind beide
+Matrizen nicht äquivalent. Die Matrix~$A$ ist noch nicht einmal eine \HM{}.
 
 \subsection{Zyklische Matrix}
 \label{sec:circulant}
