Satz der Matrix mit over- und underbraces verbessert
Ein Hinweis von https://tex.stackexchange.com/a/185098/201 half, die
Matrix besser zu setzen.

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1108,14 +1108,15 @@ Hauptdiagonalen sind $AC^{T}+BD^{T}= CA^{T}+DB^{T}=0$ und
 $EG^{T}+FH^{T}= GE^{T}+HF^{T}=0$. Mit Hilfe des Kronecker"=Produkts
 ergibt sich dann die \HM{} vom Grad $8kl$ wie folgt:
 \begin{gather}\label{eq:saruk}
+\rule[\dimexpr-4ex-\ht\strutbox]{0pt}{\dimexpr4ex+4ex+\baselineskip}
   H_{8kl}=
   \begin{pmatrix}
-    \overbrace{\sfrac{1}{2} (A+B)\otimes E + \sfrac{1}{2} (A-B)\otimes G}^{K} &
-    \overbrace{\sfrac{1}{2} (A+B)\otimes F + \sfrac{1}{2} (A-B)\otimes H}^{L}\\
-    \underbrace{\sfrac{1}{2} (C+D)\otimes E + \sfrac{1}{2} (C-D)\otimes G}_{M} &
-    \underbrace{\sfrac{1}{2} (C+D)\otimes F + \sfrac{1}{2} (C-D)\otimes H}_{M}
+    \strut\smash{\overbrace{\sfrac{1}{2} (A+B)\otimes E + \sfrac{1}{2} (A-B)\otimes G}^{\mathclap{K}}} &
+    \strut\smash{\overbrace{\sfrac{1}{2} (A+B)\otimes F + \sfrac{1}{2} (A-B)\otimes H}^{L}}\\
+    \strut\smash{\underbrace{\sfrac{1}{2} (C+D)\otimes E + \sfrac{1}{2} (C-D)\otimes G}_{M}} &
+    \strut\smash{\underbrace{\sfrac{1}{2} (C+D)\otimes F + \sfrac{1}{2} (C-D)\otimes H}_{M}}
   \end{pmatrix}
-\end{gather}\todo{Matrix besser setzen}
+\end{gather}
 In der \autoref{eq:saruk} wurden die resultierenden Teilmatrizen mit
 $K$, $L$, $M$ und $N$ bezeichnet. Es ist klar, dass die vier
 Teilmatrizen quadratisch sind und Einträge aus $\{\pm1\}$
