Typo vpn -> von

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1466,7 +1466,7 @@ schiefsymmetrisch. Hierzu wird das Matrixelement $q_{ji}$ aus
   q_{ji}= \legendre{g_{j}-g_{i}}{n}=
   \legendre{-1}{n}\legendre{g_{i}-g_{j}}{n}= \legendre{-1}{n} q_{ij}
 \end{gather*}
-Wenn $g\in\F_{n}$ eine Primitivwurzel vpn $\F_{n}$ ist, so gilt
+Wenn $g\in\F_{n}$ eine Primitivwurzel von $\F_{n}$ ist, so gilt
 $g^{n-1}=1$ und $g^{\sfrac{n-1}{2}}=-1$. Somit ist $-1$ im Fall von
 $n\equiv1\mod{4}$ ein quadratischer Rest und für $n\equiv3\mod{4}$ ein
 quadratischer Nichtrest modulo~$4$. Insgesamt ergibt sich dann für den
