--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -369,7 +369,8 @@ Zeile~$j$. Das ergibt aber $0$.
 Weiterhin ist die transponierte \HM{} wiederum eine \HM{}. Wenn die
 \autoref{eq:hm-eigensch} durch $n$ dividiert wird, ergibt sich
 $\sfrac{H}{\sqrt{n}}\cdot\sfrac{H^{T}}{\sqrt{n}}= I_{n}$. Aus der
-linearen Algebra ist bekannt, dass eine Abbildung genau dann surjektiv
+linearen Algebra ist bekannt, dass eine lineare Abbildung auf einem
+endlich"=dimensionalen Vektorraum genau dann surjektiv
 ist, wenn diese injektiv ist. Da aber $\sfrac{H}{\sqrt{n}}$ ein
 Rechtsinverses hat, ist $H$ injektiv, hat also auch ein
 Linksinverses. Damit lässt sich errechnen, dass das Linksinverse von
