--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -266,22 +266,26 @@
 \maketitle
 
 \begin{abstract}
-  Die vorliegende Arbeit gibt einen Überblick über verschiedene
-  Konstruktionsverfahren von \HMen{}. Diese spezielle Form von
-  Matrizen entstammt einer Arbeit von \Sylvester{}. Er formulierte
-  erste Eigenschaften sowie ein Konstruktionsverfahren. \Williamson{}
-  und \Paley{} schufen später weitere Verfahren. Während diese
-  Verfahren zunächst einen eher heuristischen Ansatz haben, gibt es in
-  der jüngeren Vergangenheit Versuche, Verfahren mit den Mitteln der
-  modernen Algebra zu kombinieren.
+  \HMen{} sind Matrizen deren Elemente aus $+1$ oder $-1$ bestehen und
+  deren Zeilen oder Spalten orthogonal zueinander sind. Seit etwa
+  150~Jahren sind \HMen{} Gegenstand mathematischer
+  Forschung. \Sylvester{} legte die Grundlage und \Hadamard{}
+  formulierte 1893 die zentrale Vermutung. Er stellte die Frage, ob
+  eine $4k\times 4k$ \HM{} für jedes $k\in\N$ existiert. Bisher ist
+  die Frage offen. Die mathematische Forschung bemüht sich über
+  verschiedene Konstruktionsverfahren einer Antwort zu nähern. Das
+  erste Verfahren und einige Eigenschaften von \HMen{} beschrieb
+  \Sylvester{}. \Williamson{} und \Paley{} schufen später weitere
+  Verfahren. Insbesondere das Konstruktionsverfahren von \Williamson{}
+  erwies sich als reichhaltig. \Goethals{} und \Seidel{} benutzten
+  das als Grundlage für ein weiteres Konstruktionsverfahren. Dieses
+  Verfahren wurde in jüngerer Zeit immer wieder benutzt, um neue
+  \HMen{} zu finden.
 
-  Ziel dieser Arbeit ist es, anhand der klassischen \HMen{} diese
-  Verfahren vorzustellen. Diese Betrachtung legte den Schwerpunkt auf
-  Verfahren mit algebraischen Methoden. Weiterhin gibt es aus der
-  Designtheorie andere Verfahren, die hier nur unwesentliche Beachtung
-  fanden.
-
-  \todo{Ausblick}
+  Ziel dieser Arbeit ist es, anhand diese Verfahren vorzustellen und
+  Beispiele für die Anwendung zu liefern. Abschließend wird ein
+  Ausblick auf andere Verfahren gegeben, die Ansätze aus anderen
+  Teilgebieten der Mathematik verwenden.
 \end{abstract}
 
 \tableofcontents
