--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -204,7 +204,7 @@ author = {Kimura, Hiroshi}
 }
 
 @Article{zbMATH05818729,
-    Author = {Dragomir \v{Z} {{\DJ}okovi\'c}},
+    Author = {Dragomir \v{Z} {\DJ}okovi\'c},
     Title = {{Hadamard matrices of small order and Yang conjecture.}},
     FJournal = {{Journal of Combinatorial Designs}},
     Journal = {{J. Comb. Des.}},
@@ -598,7 +598,7 @@ url = {https://willorrick.wordpress.com/2012/11/17/hadamard-matrices-the-constru
 }
 
 @Article{zbMATH06144119,
-    Author = {Darcy {Best} and Dragomir \v{Z} {{\DJ}okovi\'c} and Hadi {Kharaghani} and Hugh {Ramp}},
+    Author = {Darcy {Best} and Dragomir \v{Z} {{\DJo}kovi\'c} and Hadi {Kharaghani} and Hugh {Ramp}},
     Title = {{Turyn-type sequences: classification, enumeration, and construction.}},
     FJournal = {{Journal of Combinatorial Designs}},
     Journal = {{J. Comb. Des.}},
@@ -674,7 +674,7 @@ url = {https://willorrick.wordpress.com/2012/11/17/hadamard-matrices-the-constru
 }
 
 @Article{zbMATH00205607,
-    Author = {Dragomir \v{Z}. {{\DJ}okovi\'c}},
+    Author = {Dragomir  \v{Z} {\DJ}okovi\'c},
     Title = {{Williamson matrices of order $4n$ for $n = 33, 35, 39$.}},
     FJournal = {{Discrete Mathematics}},
     Journal = {{Discrete Math.}},
