--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -435,9 +435,9 @@ daraus die \HM{} vom Grad~$92$ zu berechnen. Allerdings ist es bis
 heute nicht gelungen, eine \HM{} vom Grad~$140$ mit Hilfe der Methode
 von \Williamson{} zu konstruieren. \Dokovic{} versuchte im Jahr 1993
 eine Lösung mit Hilfe von Computern zu finden.~\cite{zbMATH00205607}
-Dies war nicht von Erfolg gekrönt. Daher stellte er die Behauptung
-auf, dass es keine $140\times140$ \HM{} nach dem
-Konstruktionsverfahren von \Williamson{} gibt.
+Dies war, wie auch spätere Versuche, nicht von Erfolg gekrönt. Daher
+stellte er die Behauptung auf, dass es keine $140\times140$ \HM{} nach
+dem Konstruktionsverfahren von \Williamson{} gibt.
 
 
 
