--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -522,8 +522,8 @@ Multiplikation von Zeilen oder Spalten einer \HM{} mit $-1$
 erzeugt wiederum eine \HM. Angenommen die $i$-te Zeile
 wird mit $-1$ multipliziert. Das Skalarprodukt der Zeile mit sich
 bleibt in dem Fall gleich. Das Skalarprodukt der Zeilen~$i$ und $j$
-mit $i\neq j$ ist dann $\sum_{k=1}^{n} -h_{i,j}h_{k,j}=
--\sum_{k=1}^{n} h_{i,j}h_{k,j}=0$\todo{Indexierung fhcasl}, d.\,h. die Orthogonalität bleibt
+mit $i\neq j$ ist dann $\sum_{k=1}^{n} -h_{ik}h_{kj}=
+-\sum_{k=1}^{n} h_{ik}h_{kj}=0$, d.\,h. die Orthogonalität bleibt
 erhalten.
 
 \begin{satz}\label{satz:grad-hm}
