Matrix besser formatiert

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -730,19 +730,19 @@ Im \autoref{bsp:hm} ist eine \HM{} vom Grad~$2$
 aufgeführt. Durch Bildung der Transponierten, Multiplikation von
 Zeilen oder Spalten mit $-1$ oder Permutation der Zeilen oder Spalten
 lassen sich andere \HMen{} erzeugen.
-\begin{alignat*}{3}
+\begin{gather*}
   \begin{pmatrix*}[r]
     1 & 1\\
     1 & -1
-  \end{pmatrix*} &
+  \end{pmatrix*}\qquad
   \begin{pmatrix*}[r]
     1 & 1\\
     -1 & 1
-  \end{pmatrix*} &
+  \end{pmatrix*}\qquad 
   \begin{pmatrix*}[r]
     -1 & 1\\
     1 & 1
-  \end{pmatrix*} &
+  \end{pmatrix*}\qquad
   \begin{pmatrix*}[r]
     1 & -1\\
     1 & 1
@@ -750,20 +750,20 @@ lassen sich andere \HMen{} erzeugen.
   \begin{pmatrix*}[r]
     -1 & -1\\
     -1 & 1
-  \end{pmatrix*} &
+  \end{pmatrix*}\qquad
   \begin{pmatrix*}[r]
     -1 & -1\\
     1 & -1
-  \end{pmatrix*} &
+  \end{pmatrix*}\qquad
   \begin{pmatrix*}[r]
     1 & -1\\
     -1 & -1
-  \end{pmatrix*} &
+  \end{pmatrix*}\qquad
   \begin{pmatrix*}[r]
     -1 & 1\\
     -1 & -1
   \end{pmatrix*}
-\end{alignat*}
+\end{gather*}
 Durch die Betrachtung von \HMen{}, die durch die oben genannten
 Umformungen enstanden sind, sind keine wesentlich neuen Erkenntnisse
 zu erwarten. Andererseits sind in \autoref{fig:had20} drei
