--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -791,10 +791,9 @@ Im Rahmen dieser Arbeit werden nur monomiale Matrizen mit Einträgen
 aus $0$ und $\pm 1$ betrachtet. Der Begriff der Äquivalenz
 wird nun unter Ausnutzung dieser Tatsache formuliert.
 \begin{defini}
-  Seien $H_{1}$ und $H_{2}$ zwei $n\times n$ \HMen{}. Die Matrizen $H_{1}$
-  und $H_{2}$ heißen
-  \highl[Hadamard-Matrix!äquivalent]{äquivalent}\index{äquivalent},
-  wenn $n\times n$  monomiale Matrizen $P$, $Q$ mit
+  Seien $H_{1}$ und $H_{2}$ zwei $n\times n$ \HMen{}. Die Matrizen
+  $H_{1}$ und $H_{2}$ heißen \highl{äquivalent}, wenn $n\times n$
+  monomiale Matrizen $P$, $Q$ mit
   \begin{gather*}
     H_{1} = PH_{2}Q^{T}
   \end{gather*}
