--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -2072,8 +2072,8 @@ finden. Erst \Mahato{} gelang es im Jahr 2011 eine notwendige und
 hinreichende Bedingung hierfür anzugeben. Dazu betrachtet er die
 zyklische Gruppe ganzer Zahlen $\Z_{n}$ modulo $n$ bezüglich der
 Addition. Die Gruppe $\Z_{n}$ wird in zwei Teilmengen $M$ und $N$
-zerlegt. Für $M$ gilt, dass $0\in M$ und aus $a\in M$ folgt, dass auch
-$-a\in M$. Die Teilmenge $N$ ist definiert durch $\Z_{n}\setminus
+zerlegt. Für $M$ gilt, dass $0\in M$ und für $a\in M$ muss auch
+$-a\in M$ sein. Die Teilmenge $N$ ist definiert durch $\Z_{n}\setminus
 M$. Weiterhin ist $M+N=\Set{ a+b \mod{n} | a\in M, b\in N}$ und kann
 gleiche Zahlen mehrmals enthalten. Die Menge $V$ bezeichnet die
 verschiedenen Elemente von $M+N$. Schließlich ist $n_{c}$ die Anzahl
