Beweis zu Scarpis vervollständigt

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1582,7 +1582,22 @@ eine neue \HM{}.
       Zeilen~$h_{r}$ und $h_{s}$ aus der \HM~$H_{n}$. Das Produkt
       zweier Zeilen von $M_{r}$ ergibt somit $p$-mal $-1$ und einmal
       $p$. Die Summe ist also $0$ und damit sind zwei Zeilen orthogonal.
-    \item Orthogonalität der Zeilen von $M$ zu den Zeilen von $M_{r}$: \todo{Ergänzen}
+    \item Orthogonalität der Zeilen von $M$ zu den Zeilen von $M_{r}$:
+      Die $n$~Elemente der Matrix~$M$ haben jeweils die
+      Länge~$p$. Damit ist jedes Element gleichlang zu einem Element
+      $c_{i}$ der Matrix~$M_{r}$ für $0\leq i\leq n-1$. Wenn nun das
+      Produkt über ein Element~$c_{i}$ betrachtet wird, ist das die
+      Summe aller Elemente in $c_{i}$ multipliziert mit $+1$ oder
+      $-1$. Die Summe der Elemente von $c_{i}$ lässt sich auf die
+      entsprechende Zeile von $C$ zurückführen. Die Matrix~$C$
+      entstand aus der normalisierten \HM{} $H_{n}$. Die Zeilensumme
+      von $H_{n}$ ist $0$ und $C$ entstand durch das Entfernen der
+      $1$. Also ist die Summe der Elemente von $c_{i}$ ebenfalls
+      $-1$.
+
+      Wenn nun eine Zeile von $M$ mit einer Zeile von $M_{r}$
+      multipliziert wird, wird über alternierende $\pm1$"=Werte und
+      eine gerade Zahl von Summanden addiert. Also ist die Summe $0$.
     \item Orthogonalität der Zeilen einer Matrix~$M_{r}$ zu denen einer
       Matrix~$M_{s}$ für $r\neq s$ und $0\leq r,s\leq p-1$: Für den
       Nachweis ist das Skalarprodukt je einer Zeile von $M_{r}$ und
