Def: nichtper Autokorr-fkt

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -2261,6 +2261,18 @@ Konstruktionsverfahrens werden zunächst einige Begriffe vorgestellt.
 Dazu werden Folgen $A=(a_{0},a_{1},\dots,a_{n-1})$ der Länge~$n$
 betrachtet.
 
+\begin{defini}
+  Sei $A=(a_{0},a_{1},\dots,a_{n-1})$ eine Folge. Dann ist die
+  \highl{nicht"=periodische Autokorrelationsfunktion} $N_{A}$ für
+  $k\geq1$ wie folgt definiert:
+  \begin{gather*}
+    N_{A}(k)=
+    \begin{cases}
+      \sum_{i=0}^{n-1-k} a_{i}a_{i+k} & k=0,1,\dots,n-1\\
+      0 & k\geq n
+    \end{cases}
+  \end{gather*}
+\end{defini}
 
 
 
