Bemerkungen zu TTS

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -118,6 +118,7 @@
   \<Dokovic & Dragomir \v{Z}. & {\DJ}okovi\'c & >
   \<Mahato & Hrishikesh & Mahato & >
   \<Turyn & Richard J. & Turyn & >
+  \<London & Stephen & London & >
 \end{nameauth}
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
@@ -2517,6 +2518,28 @@ Beweisführung verzichtet werden.
     um eine \HM{} vom Grad $4(3n-1)=12n-4$ zu konstruieren.
   \end{proof}
 \end{satz}
+
+Die Folgen vom Turyn"=Typ haben sich als wichtige Komponente zur
+Konstruktion von \HMen{} erwiesen. Im Jahr 2004 wurden diese Folgen
+mit $n=36$ benutzt, um eine \HM{} vom Grad~$428$ zu
+konstruieren~\cite{JCD:JCD20043}. Derzeit ist offen, ob es \HMen{} vom
+Grad~$668$ und $716$ gibt. Beide Fälle könnten mittels Folgen vom
+Turyn"=Typ für $n=56$ bzw. $n=60$ erschlossen werden.
+
+Bisher ist jedoch wenig zur Existenz dieser Folgen bekannt. Der
+Großteil der bisherigen Erkenntnisse stammt von
+Computerberechnungen. So nutzten \Kharaghani{} und \Tayfeh{} 16~PCs,
+die zwölf Stunden Rechenzeit für die Ermittlung der Folgen
+benötigten. Im Jahr~2013 wurde das erste Beispiel für $n=38$
+gefunden~\cite{zbMATH06144119} und \London{} fand in seiner
+Promotionsarbeit weitere Folgen für $n=34, 36,
+38$~\cite{london13}. Weiterhin gelang es ihm erstmalig vier Folgen für
+$n=40$ zu bestimmen. Allerdings steigt der Rechenaufwand gewaltig
+an. Während für $n=34$ noch sechs Stunden Rechenzeit pro gefundener
+Folge aufgewendet wurden, stieg die Zahl für $n=40$ auf \num{12000}
+Stunden. \London{} schätzt ab, dass Folgen vom Turyn"=Typ für $n=56$
+mit den derzeit bekannten Algorithmen kaum in annehmbarer Zeit
+berechenbar sind.
 
 
 
